# cosmoe

./: .gitignore  BUGS  Makefile.common  Makefile.in  README  config.h.in  configure  configure.in  cosmoe.sh  distconfigure.sh
headers/os/: BeBuild.h
headers/os/app/: AppDefs.h  Application.h  Clipboard.h  Handler.h  Invoker.h  Looper.h  Message.h  MessageFilter.h  MessageRunner.h  Messenger.h  Roster.h
headers/os/interface/: Bitmap.h  CheckBox.h  Deskbar.h  DirectoryView.h  Font.h  GraphicsDefs.h  IPoint.h  IRect.h  Icon.h  InterfaceDefs.h  ListItem.h  ListView.h  Menu.h  Point.h  PopUpMenu.h  RadioButton.h  Region.h  Requesters.h  Screen.h  ScrollBar.h  Shelf.h  Slider.h  Sprite.h  StringItem.h  TextControl.h  View.h  Window.h
headers/os/kernel/: OS.h  exceptions.h  fs_index.h  fs_info.h  image.h  kernel.h  macros.h
headers/os/storage/: Directory.h  Entry.h  FindDirectory.h  Mime.h  Node.h  SymLink.h  VolumeRoster.h
headers/os/support/: Autolock.h  BlockCache.h  ByteOrder.h  DataIO.h  Debug.h  Errors.h  List.h  Locker.h  SupportDefs.h  TypeConstants.h  syslog.h
headers/os/util/: Exceptions.h  array.h  resource.h
headers/private/app/: MessageBody.h  MessageField.h  ServerProtocol.h
headers/private/interface/: moreUTF8.h
headers/private/servers/app/: ColorSet.h  Decorator.h  DisplayDriver.h  FontFamily.h  FontServer.h  LayerData.h  ServerBitmap.h  ServerConfig.h  ServerFont.h
headers/private/storage/: kernel_interface.h
src/add-ons/: Makefile.in
src/add-ons/decorators/: Makefile.in
src/add-ons/decorators/amiga/: Makefile.in  amigadecorator.cpp  amigadecorator.h
src/add-ons/decorators/be/: HSV.h  Makefile.in  beishdecorator.cpp  beishdecorator.h  gradient.cpp  gradient.h
src/add-ons/decorators/next/: Makefile.in  nextdecorator.cpp  nextdecorator.h
src/add-ons/translators/: Makefile  Makefile.in
src/add-ons/translators/bmptranslator/: BMPTranslator.cpp  Makefile  Makefile.in
src/add-ons/translators/libtifftranslator/: tif_aux.c  tif_close.c  tif_codec.c  tif_color.c  tif_compress.c  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_extension.c  tif_fax3.c  tif_flush.c  tif_getimage.c  tif_lzw.c  tif_next.c  tif_open.c  tif_packbits.c  tif_predict.c  tif_predict.h  tif_print.c  tif_read.c  tif_strip.c  tif_swab.c  tif_thunder.c  tif_tile.c  tif_unix.c  tif_version.c  tif_warning.c  tif_write.c  tif_zip.c  tiff.h  tiffcomp.h  tiffconf.h  tiffio.h  tiffiop.h
src/add-ons/translators/pngtranslator/: Makefile  Makefile.in
src/apps/: Makefile.in
src/apps/OpenTracker/: Makefile
src/apps/OpenTracker/deskbar/: .ppc_dependencies  .x86_dependencies  AUTHORS  (+33 more)
src/apps/bedate/: Makefile.in  disapp.cpp  disapp.h  discordian.cpp  discordian.h  disview.cpp  disview.h  diswindow.cpp  diswindow.h  julian.cpp  julian.h
src/apps/calc/: CalcEngine.cpp  CalcEngine.h  CalcView.cpp  CalcView.h  CalcWindow.cpp  CalcWindow.h  Calculator.cpp  Calculator.h  FrameView.cpp  FrameView.h  Makefile.in
src/apps/cterm/: Makefile  Makefile.in  main.cpp  tview.cpp  tview.h
src/apps/desktop/: Makefile  Makefile.in  icon.cpp  iconview.cpp  iconview.h  jpeg.cpp  login.cpp  main.cpp
src/apps/guido/: Makefile.in  app.cpp  disapp.cpp  diswindow.cpp  diswindow.h
src/apps/guiprefs/: Makefile  Makefile.in  coloredit.cpp  coloredit.h  fontpanel.cpp  fontpanel.h  keyboardpanel.cpp  keyboardpanel.h  main.cpp  screenpanel.cpp  screenpanel.h  windowpanel.cpp  windowpanel.h
src/apps/keymapconv/: Makefile  Makefile.in
src/apps/pulse/: BottomPrefsView.cpp  BottomPrefsView.h  CPUButton.cpp  CPUButton.h  Common.h  ConfigView.cpp  ConfigView.h  Makefile.in  MiniPulseView.cpp  MiniPulseView.h  NormalPulseView.cpp  NormalPulseView.h  Prefs.cpp  PrefsWindow.cpp  PrefsWindow.h  ProgressBar.cpp  ProgressBar.h  Pulse.rsrc  PulseApp.cpp  PulseApp.h  PulseView.cpp  PulseView.h  PulseWindow.cpp  PulseWindow.h
src/apps/testharness/: Makefile.in  testharness.sh  testlist.cpp  testlist.sh  teststopwatch.sh
src/kits/: Makefile.in  libcosmoe.dox
src/kits/app/: Application.cpp  Clipboard.cpp  Cursor.cpp  Handler.cpp  LinkMsgReader.cpp  Looper.cpp  Message.cpp  MessageFilter.cpp  MessageRunner.cpp  Messenger.cpp  PropertyInfo.cpp
src/kits/interface/: Alert.cpp  Bitmap.cpp  Box.cpp  Button.cpp  Control.cpp  Deskbar.cpp  Font.cpp  Input.cpp  InterfaceDefs.cpp  ListView.cpp  Menu.cpp  MenuField.cpp  MenuItem.cpp  PopUpMenu.cpp  RadioButton.cpp  Rect.cpp  Region.cpp  RegionSupport.cpp  Screen.cpp  ScrollBar.cpp  Slider.cpp  StringView.cpp  TextControl.cpp  View.cpp  Window.cpp  directoryview.cpp  ipoint.cpp  irect.cpp  requesters.cpp  spinner.cpp  sprite.cpp  stdbitmaps.cpp  stdbitmaps.h
src/kits/kernel/: area.c  atomic.c  misc.c
src/kits/storage/: Directory.cpp  Entry.cpp  File.cpp  FilePanel.cpp  MimeType.cpp  Node.cpp  NodeMonitor.cpp  Path.cpp  Query.cpp  Statable.cpp  SymLink.cpp  kernel_interface.POSIX.cpp  storage.ddoc
src/kits/support/: Archivable.cpp  Beep.cpp  BufferIO.cpp  ByteOrder.cpp  DataIO.cpp  List.cpp  Locker.cpp  StopWatch.cpp  String.cpp
src/servers/app/: AppServer.cpp  AppServer.h  BGet++.cpp  BitmapDriver.cpp  BitmapDriver.h  ColorSet.cpp  CursorData.cpp  CursorManager.cpp  Decorator.cpp  DefaultDecorator.cpp  DefaultDecorator.h  Desktop.cpp  Desktop.h  DisplayDriver.cpp  FontFamily.cpp  FontServer.cpp  Layer.cpp  Layer.h  LayerData.cpp  Makefile.in  PNGDump.cpp  RGBColor.cpp  ServerApp.cpp  ServerApp.h  ServerBitmap.cpp  ServerFont.cpp  ServerScreen.cpp  ServerScreen.h  ServerWindow.cpp  ServerWindow.h  SysCursor.cpp  Utils.cpp  WinBorder.cpp  WinBorder.h  Workspace.cpp  Workspace.h  clipboard.cpp  clipboard.h  config.cpp  config.h  (+20 more)
src/servers/registrar/: AppInfoList.cpp  Debug.h  MessageRunnerManager.cpp  Registrar.cpp  TRoster.cpp  TRoster.h
system/: Makefile.in
system/config/: appserver
system/icons/: boxes_16.icon  folder_16.icon
(+95 files in other folders)
